--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
 
             echo "HOST=0.0.0.0" >> /var/www/andi-website/cms/.env
             echo "PORT=1337" >> /var/www/andi-website/cms/.env
-            echo "NODE_ENV=production" > /var/www/andi-website/cms/.env
+            echo "NODE_ENV=production" >> /var/www/andi-website/cms/.env
             echo "APP_KEYS=${{ secrets.STRAPI_APP_KEYS }}" >> /var/www/andi-website/cms/.env
             echo "API_TOKEN_SALT=${{ secrets.STRAPI_API_TOKEN_SALT }}" >> /var/www/andi-website/cms/.env
             echo "ADMIN_JWT_SECRET=${{ secrets.STRAPI_ADMIN_JWT_SECRET }}" >> /var/www/andi-website/cms/.env
@@ -69,3 +69,9 @@ jobs:
 
             cd cms
             pm2 restart strapi-app || pm2 start npm --name strapi-app -- run start
+
+            # Save current process list
+            pm2 save
+
+            # Enable pm2 to start at boot
+            pm2 startup systemd -u $USER --hp $HOME
