--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,29 +19,22 @@ jobs:
         with:
           node-version: 18
 
-      - name: Write Next.js env file
-        run: |
-          echo "STRAPI_API_URL=${{ secrets.STRAPI_API_URL }}" > .env.local
-
-      - name: Install & Build Next.js
-        run: |
-          npm ci --legacy-peer-deps
-          npm run build
-
-      - name: Install & Build Strapi
-        working-directory: cms
-        run: |
-          npm ci --legacy-peer-deps
-          npm run build
-
-      - name: Upload files to VPS
+      - name: Upload files to VPS (Next.js + Strapi + DB)
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
-          source: ".next,public,cms"
-          target: "/var/www/andi-website"
+          source: |
+            .next
+            public
+            package.json
+            package-lock.json
+            next.config.mjs
+            cms
+            cms/.tmp/data.db
+          target: /var/www/andi-website
+
 
       - name: Write .env files on VPS
         uses: appleboy/ssh-action@v0.1.8
@@ -52,25 +45,23 @@ jobs:
           script: |
             echo "STRAPI_API_URL=${{ secrets.STRAPI_API_URL }}" > /var/www/andi-website/.env
 
-            echo "HOST=0.0.0.0" > /var/www/andi-website/cms/.env
-            echo "PORT=1337" >> /var/www/andi-website/cms/.env
-            echo "NODE_ENV=production" >> /var/www/andi-website/cms/.env
-            echo "APP_KEYS=${{ secrets.STRAPI_APP_KEYS }}" >> /var/www/andi-website/cms/.env
-            echo "API_TOKEN_SALT=${{ secrets.STRAPI_API_TOKEN_SALT }}" >> /var/www/andi-website/cms/.env
-            echo "ADMIN_JWT_SECRET=${{ secrets.STRAPI_ADMIN_JWT_SECRET }}" >> /var/www/andi-website/cms/.env
-            echo "TRANSFER_TOKEN_SALT=${{ secrets.STRAPI_TRANSFER_TOKEN_SALT }}" >> /var/www/andi-website/cms/.env
-            echo "ENCRYPTION_KEY=${{ secrets.STRAPI_ENCRYPTION_KEY }}" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_CLIENT=sqlite" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_HOST=" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_PORT=" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_NAME=" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_USERNAME=" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_PASSWORD=" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_SSL=false" >> /var/www/andi-website/cms/.env
-            echo "DATABASE_FILENAME=.tmp/data.db" >> /var/www/andi-website/cms/.env
-            echo "JWT_SECRET=rLBfGErF6kb0iiYycCHuTg==" >> /var/www/andi-website/cms/.env
+            mkdir -p /var/www/andi-website/cms/.tmp
 
-      - name: Restart apps on VPS
+            cat <<EOF > /var/www/andi-website/cms/.env
+            HOST=0.0.0.0
+            PORT=1337
+            NODE_ENV=production
+            APP_KEYS=${{ secrets.STRAPI_APP_KEYS }}
+            API_TOKEN_SALT=${{ secrets.STRAPI_API_TOKEN_SALT }}
+            ADMIN_JWT_SECRET=${{ secrets.STRAPI_ADMIN_JWT_SECRET }}
+            TRANSFER_TOKEN_SALT=${{ secrets.STRAPI_TRANSFER_TOKEN_SALT }}
+            ENCRYPTION_KEY=${{ secrets.STRAPI_ENCRYPTION_KEY }}
+            DATABASE_CLIENT=sqlite
+            DATABASE_FILENAME=.tmp/data.db
+            JWT_SECRET=rLBfGErF6kb0iiYycCHuTg==
+            EOF
+
+      - name: Build & Restart apps on VPS
         uses: appleboy/ssh-action@v0.1.8
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -81,7 +72,8 @@ jobs:
             pm2 restart next-app || pm2 start npm --name next-app -- run start -- -p 3000 -H 0.0.0.0
 
             cd cms
+            npm ci --legacy-peer-deps
+            npm run build
             pm2 restart strapi-app || pm2 start npm --name strapi-app -- run start
 
-            # Save current process list
             pm2 save
