--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,8 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
-            rm -rf /var/www/andi-website/*
+            pm2 delete all || true
+            sudo rm -rf /var/www/andi-website
 
       - name: Upload files to VPS (Next.js + Strapi + DB)
         uses: appleboy/scp-action@v0.1.7
@@ -70,8 +71,6 @@ jobs:
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
             cd /var/www/andi-website
-            pm2 delete next-app || true
-            rm -rf .next
             npm ci --legacy-peer-deps
             npm run build
             pm2 restart next-app || pm2 start npm --name next-app -- run start -- -p 3000 -H 0.0.0.0
