--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,14 +46,14 @@ jobs:
           key: ${{ secrets.VPS_PRIVATE_KEY }}
           script: |
             echo "STRAPI_API_URL=${{ secrets.STRAPI_API_URL }}" > /var/www/andi-website/.env
-            echo "NEXT_PUBLIC_STRAPI_API_URL=https://cms.andi.zamora.ai" >> /var/www/andi-website/.env
+            echo "NEXT_PUBLIC_STRAPI_API_URL=https://cms.zamora.ai" >> /var/www/andi-website/.env
 
             mkdir -p /var/www/andi-website/cms/.tmp
 
             cat <<EOF > /var/www/andi-website/cms/.env
             HOST=0.0.0.0
             PORT=1337
-            APP_URL=https://cms.andi.zamora.ai
+            APP_URL=https://cms.zamora.ai
             PROXY_ENABLED=true
             NODE_ENV=production
             APP_KEYS=${{ secrets.STRAPI_APP_KEYS }}
